--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "build-mac": "electron-builder build --mac",
+    "build-win": "electron-builder build --win",
+    "build-linux": "electron-builder build --linux",
     "preview": "vite preview",
     "pree2e": "vite build --mode=test",
     "e2e": "playwright test"
@@ -27,14 +30,14 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "electron": "^29.1.1",
     "electron-builder": "^24.13.3",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.38",
     "postcss-import": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
     "vite-plugin-electron": "^0.28.4",
